--- a/mind-boot-common/pom.xml
+++ b/mind-boot-common/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mind-boot</artifactId>
-        <groupId>com.mind.boot</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <groupId>io.github.mind-boot</groupId>
+        <version>1.0.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
