--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,53 @@
   </parent>
   
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mind.boot</groupId>
+  <groupId>io.github.mind-boot</groupId>
   <artifactId>mind-boot</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0-RELEASE</version>
   <packaging>pom</packaging>
+
   <modules>
   	<module>mind-boot-core</module>
   	<module>mind-boot-starters</module>
     <module>mind-boot-common</module>
   </modules>
+
+  <name>mind-boot</name>
+  <description>a open source project based on Spring Boot</description>
+
+  <licenses>
+      <license>
+          <name>The Apache Software License, Version 2.0</name>
+          <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+          <distribution>repo</distribution>
+      </license>
+  </licenses>
+
+  <scm>
+      <url>https://github.com/mind-boot/mind-boot.git</url>
+      <connection>scm:https://github.com/mind-boot/mind-boot.git</connection>
+      <developerConnection>scm:git:https://github.com/mind-boot/mind-boot.git</developerConnection>
+  </scm>
+
+  <!--发布到公司maven仓库配置-->
+  <distributionManagement>
+      <repository>
+          <id>repository</id>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      </repository>
+      <snapshotRepository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      </snapshotRepository>
+  </distributionManagement>
+
+  <developers>
+      <developer>
+          <name>Jerold</name>
+          <email>1773649002@qq.com</email>
+          <url>https://github.com/mind-boot</url>
+      </developer>
+  </developers>
 
   <!-- jdk 1.8 -->
   <build>
@@ -28,22 +66,41 @@
                   <encoding>UTF-8</encoding>
               </configuration>
           </plugin>
+          <!-- gpg plugin 签名认证 -->
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-gpg-plugin</artifactId>
+              <version>1.6</version>
+              <executions>
+                  <execution>
+                      <id>sign-artifacts</id>
+                      <phase>verify</phase>
+                      <goals>
+                          <goal>sign</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>
+          <!--staging puglin 自动执行发布阶段-->
+          <plugin>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>nexus-staging-maven-plugin</artifactId>
+              <version>1.6.7</version>
+              <extensions>true</extensions>
+              <configuration>
+                  <serverId>ossrh</serverId>
+                  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                  <autoReleaseAfterClose>true</autoReleaseAfterClose>
+              </configuration>
+          </plugin>
+          <!-- release plugin release仓库部署插件 -->
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.4.2</version>
+          </plugin>
       </plugins>
   </build>
-
-  <!--发布到公司maven仓库配置-->
-  <distributionManagement>
-      <repository>
-          <id>releases</id>
-          <name>Nexus Release Repository</name>
-          <url>http://192.168.0.101:8081/nexus/content/repositories/releases/</url>
-      </repository>
-      <snapshotRepository>
-          <id>snapshots</id>
-          <name>Nexus Snapshot Repository</name>
-          <url>http://192.168.0.101:8081/nexus/content/repositories/snapshots/</url>
-      </snapshotRepository>
-  </distributionManagement>
 
   <properties>
       <mysql-connector-java-version>5.1.46</mysql-connector-java-version>
@@ -51,7 +108,7 @@
       <pagehelper-spring-boot-starter>1.2.10</pagehelper-spring-boot-starter>
       <mybatis-spring-boot.version>1.3.2</mybatis-spring-boot.version>
       <swagger-version>2.9.2</swagger-version>
-      <httpclient-version>4.3.6</httpclient-version>
+      <httpclient-version>4.3.3</httpclient-version>
       <commons-httpclient-version>3.1</commons-httpclient-version>
       <commons-io-version>2.4</commons-io-version>
       <mapper-spring-boot-starter>2.1.0</mapper-spring-boot-starter>
@@ -179,7 +236,7 @@
 
       <!-- pinyin -->
       <dependency>
-          <groupId>net.sourceforge.pinyin4j</groupId>
+          <groupId>com.belerweb</groupId>
           <artifactId>pinyin4j</artifactId>
           <version>2.5.0</version>
       </dependency>
