--- a/mind-boot-core/pom.xml
+++ b/mind-boot-core/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.github.mind-boot</groupId>
     <artifactId>mind-boot</artifactId>
-    <version>1.0.0-RELEASE</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>mind-boot-core</artifactId>
   <packaging>jar</packaging>
@@ -30,7 +30,7 @@
     <dependency>
         <groupId>io.github.mind-boot</groupId>
         <artifactId>mind-boot-common</artifactId>
-        <version>1.0.0-RELEASE</version>
+        <version>1.0.0</version>
         <scope>compile</scope>
     </dependency>
   </dependencies>
