--- a/mind-boot-starters/mind-boot-starter-web/pom.xml
+++ b/mind-boot-starters/mind-boot-starter-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mind-boot-starters</artifactId>
         <groupId>io.github.mind-boot</groupId>
-        <version>1.0.0-RELEASE</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
