--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.mind-boot</groupId>
   <artifactId>mind-boot</artifactId>
-  <version>1.0.0-RELEASE</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <modules>
